<resources>
    <string name="app_name">Hummus</string>
    <string name="UsuarioLayout">Usuario...</string>
    <string name="PasswordLayout">Contraseña...</string>
    <string name="inicio">Inició de sesión</string>
    <string name="txt_btn_Inicio">Iniciar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="forgetPassword">Has olvidado la contraseña?</string>
    <string name="name_user_regis">Nombre de Usuario</string>
    <string name="passwd_registrar">Contraseña</string>
    <string name="txt_registrar">Registrar Usuario</string>
    <string name="passwd_registrar_conf">Repita la contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="switch_txt">Mostrar contraseña</string>
    <string name="add_receta">Añadir receta</string>
    <string name="recovery_password">Recuperar Contraseña</string>
    <string name="repeat_password">Repite contraseña</string>
    <string name="insertPassword">Introduce la contraseña</string>
    <string name="recupera_usuario">Introduce usuario</string>
    <string name="txt_btn_recuperar">Recuperar</string>
    <string name="txt_pais">Elija un país:</string>
    <string name="correo_edit">Correo</string>
    <string name="titulo">Titulo</string>
    <string name="titulo_receta">Titulo: </string>
    <string name="descripcion_receta_add">Escribe la descripción de tu receta!</string>
    <string name="txt_spinner">Tipo:</string>
    <string name="add_dificultades">Dificultades:</string>
    <string name="ingredientes_add">Rellena de Ingredientes</string>
    <string name="add_duration">Duración</string>
    <string name="pestanya_Imagen">Global</string>
    <string name="detall_add">Detalles</string>
    <string name="Compartir_receta">Compartir</string>
    <string name="dificultad_receta">Dificultad:</string>
    <string name="tipo_receta">Tipo:</string>
    <string name="duracion_receta">Duración:</string>
    <string name="btn_txt_modificar">Modificar</string>
    <string name="btn_abrir">Abrir</string>
    <string name="add_receta_floating_button">Añadir receta</string>
    <string name="txt_foro_floating">Foro</string>
    <string name="txt_info_floating">Info</string>
    <string name="txt_guardar">Guardar</string>
    <string name="txt_siguiente">Siguiente</string>
    <string name="eliminar">Eliminar</string>
    <string name="btn_add">Añadir</string>
    <string name="ingredientes">INGREDIENTES</string>
    <string name="txt_descr_receta">Descripción</string>
    <string name="dial_desc_cantidad">Cantidad</string>
    <string name="dial_desc_ingrediente">Nombre ingrediente</string>
    <string name="txt_compartir">Compartir</string>
    <string name="txt_configuracion_item">Configuración</string>
    <string name="txt_change_password_item">Cambiar Contraseña</string>
    <string name="txt_contactanos_item">Contactanos</string>
    <string name="txt_close_session_item">Cerrar sesión</string>
    <string-array name="tipos">
        <item>Carne</item>
        <item>Vegetariano</item>
        <item>Vegano</item>
    </string-array>
    <string-array name="dificultades">
        <item>Fácil</item>
        <item>Normal</item>
        <item>Díficil</item>
    </string-array>
    <string-array name="paises">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bonaire, Sint Eustatius and Saba</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Côte Ivoire</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Holy See (Vatican City State)</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia, the former Yugoslav Republic of</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Islands</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Réunion</item>
        <item>Saint Barthélémy</item>
        <item>Saint Helena, Ascension and Tristan da Cunha</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin (French part)</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten (Dutch part)</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>State of Palestine</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>São Tomé and Príncipe</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>USA Minor Outlying Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Virgin Islands (British)</item>
        <item>Virgin Islands (USA)</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Åland Islands</item>
    </string-array>
</resources>