<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="195dp">

    <TextView
        android:id="@+id/textView3"
        style="@style/Title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/ingredientes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/separadorGris">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/DescIngre"
            android:layout_marginBottom="@dimen/separador"
            android:layout_marginTop="@dimen/DescIngre"
            android:layout_marginRight="@dimen/DescIngre"
            android:layout_weight="50"
            android:background="@color/blanco"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                style="@style/Title_dialog_ingre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/dial_desc_ingrediente" />

            <EditText
                android:id="@+id/edit_nom_ingre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/DescIngre"
            android:layout_marginRight="@dimen/DescIngre"
            android:layout_marginTop="@dimen/separador"
            android:layout_marginBottom="@dimen/DescIngre"
            android:background="@color/blanco"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                style="@style/Title_dialog_ingre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/dial_desc_cantidad" />

            <EditText
                android:id="@+id/edit_cant_ingre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>